# inference-gateway

./: .dockerignore  .gcloudignore  .gitignore  BENCHMARK_COMPLIANCE_REPORT.md  Cargo.toml  Dockerfile  README.md  deploy-cloud-function.sh  docker-compose.yaml  index.js  package-lock.json  package.json
.swarm/: state.json
benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
benchmarks/output/: all_results.json  summary.md
benchmarks/output/raw/: .gitkeep  backend_routing.json
contracts/: health-response.schema.json  route-request.schema.json  route-response.schema.json
crates/agentics-contracts/: Cargo.toml
crates/agentics-contracts/src/: agent.rs  decision_event.rs  error.rs  execution_span.rs  lib.rs  routing.rs
crates/gateway-agents/: Cargo.toml
crates/gateway-agents/src/: handler.rs  inference_routing.rs  lib.rs  telemetry.rs  types.rs
crates/gateway-agents/src/phase7/: budget.rs  config.rs  identity.rs  mod.rs
crates/gateway-benchmarks/: Cargo.toml
crates/gateway-benchmarks/src/: io.rs  lib.rs  markdown.rs  result.rs
crates/gateway-benchmarks/src/adapters/: backend_routing.rs  circuit_breaker.rs  concurrency.rs  health_check.rs  mod.rs  rate_limiting.rs  request_transform.rs  streaming_throughput.rs  vendor_fallback.rs
crates/gateway-cli/: Cargo.toml
crates/gateway-cli/src/: cli.rs  main.rs  output.rs
crates/gateway-cli/src/commands/: agent.rs  backend_health.rs  benchmark.rs  cache_status.rs  chat.rs  completions.rs  config.rs  cost.rs  health.rs  info.rs  latency.rs  migrate.rs  mod.rs  models.rs  routing_strategy.rs  start.rs  token_usage.rs  validate.rs
crates/gateway-config/: Cargo.toml
crates/gateway-config/src/: hot_reload.rs  lib.rs  loader.rs  schema.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: error.rs  lib.rs  provider.rs  request.rs  response.rs  streaming.rs  types.rs
crates/gateway-integrations/: Cargo.toml
crates/gateway-integrations/src/: config.rs  error.rs  lib.rs  traits.rs
crates/gateway-integrations/src/adapters/: auto_optimizer.rs  connector_hub.rs  cost_ops.rs  manager.rs  mod.rs  observatory.rs  policy_engine.rs  router.rs  ruvector.rs  sentinel.rs  shield.rs
crates/gateway-migrations/: Cargo.toml
crates/gateway-migrations/src/: config.rs  error.rs  lib.rs  migration.rs  migrator.rs  pool.rs  schema.rs
crates/gateway-providers/: Cargo.toml
crates/gateway-providers/src/: anthropic.rs  azure.rs  bedrock.rs  google.rs  lib.rs  openai.rs  registry.rs
crates/gateway-resilience/: Cargo.toml
crates/gateway-resilience/src/: bulkhead.rs  circuit_breaker.rs  distributed_cache.rs  lib.rs  retry.rs  timeout.rs
crates/gateway-routing/: Cargo.toml
crates/gateway-routing/src/: lib.rs  load_balancer.rs  router.rs  rules.rs  selector.rs  strategy.rs
crates/gateway-sdk/: Cargo.toml
crates/gateway-sdk/src/: client.rs  config.rs  error.rs  lib.rs  request.rs  response.rs  streaming.rs
crates/gateway-security/: Cargo.toml
crates/gateway-security/src/: config.rs  crypto.rs  error.rs  headers.rs  ip_filter.rs  lib.rs  middleware.rs  sanitize.rs  secrets.rs  signing.rs  validation.rs
crates/gateway-server/: Cargo.toml
crates/gateway-server/src/: auth.rs  error.rs  extractors.rs  handlers.rs  health.rs  lib.rs  middleware.rs  routes.rs  server.rs  shutdown.rs  state.rs
crates/gateway-server/tests/: e2e_tests.rs
crates/gateway-telemetry/: Cargo.toml
crates/gateway-telemetry/src/: audit.rs  cost.rs  lib.rs  logging.rs  metrics.rs  pii.rs  request_tracker.rs  tracing_setup.rs
deploy/: DEPLOYMENT.md
deploy/cloud-run/: Dockerfile  cloudbuild.yaml  deploy.sh  env.yaml  phase7-env.yaml  service.yaml
deploy/cloud-run/scripts/: healthcheck.sh  startup.sh
deploy/docker/: README.md
deploy/grafana/: README.md  alerts.yaml  llm-gateway-overview.json  llm-gateway-providers.json
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  redis.yaml  secret.yaml  service.yaml
deploy/monitoring/: otel-collector.yaml  prometheus.yml
deploy/scripts/: deploy.sh  rollback.sh  verify.sh
deployment/docker/: Dockerfile  Dockerfile.distroless
deployment/helm/llm-gateway/: Chart.yaml  values.yaml
deployment/k8s/: kustomization.yaml
deployment/monitoring/: alertmanager.yml  prometheus.yml
deployment/scripts/: health-check.sh  smoke-tests.sh
deployment/terraform/: main.tf  variables.tf
docs/: API.md  ARCHITECTURE.md  CONCURRENCY_PATTERNS.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md
docs/api/: openapi.yaml
plans/: API-DESIGN-AND-VERSIONING.md  ARCHITECTURE.md  DATA_FLOW_AND_SEQUENCE_DIAGRAMS.md  DEPENDENCY-MATRIX.md  DEPLOYMENT.md  DOCUMENTATION-INDEX.md  EDGE_CASES_AND_ERROR_HANDLING.md  ENTERPRISE-READINESS-ASSESSMENT.md  FILES_SUMMARY.txt  INFRASTRUCTURE-OVERVIEW.md  LLM-Inference-Gateway-Architecture.md  LLM-Inference-Gateway-Completion.md  LLM-Inference-Gateway-Pseudocode.md  LLM-Inference-Gateway-Refinement.md  LLM-Inference-Gateway-SPARC-Master-Specification.md  LLM-Inference-Gateway-Specification.md  PERFORMANCE-OPTIMIZATION-CHECKLIST.md  PERFORMANCE_ARCHITECTURE.md  PROVIDER_ARCHITECTURE_SUMMARY.md  PROVIDER_QUICKSTART.md  README.md  RUST-CODING-STANDARDS.md  SECURITY-ARCHITECTURE.md  TESTING-AND-QA-ARCHITECTURE.md  TYPE_SAFETY_RULES.md  circuit-breaker-resilience-pseudocode.md  configuration-hot-reload-pseudocode.md  core-data-structures-pseudocode.md  http-server-api-handlers-pseudocode.md  middleware-pipeline-pseudocode.md  observability-telemetry-pseudocode.md  provider-abstraction-layer.rs  provider-advanced-features.rs  provider-implementations.rs  routing_load_balancing_pseudocode.md
src/: main.rs
test/: index.test.js
tests/integration/: Cargo.toml
tests/integration/src/: api_tests.rs  cache_tests.rs  e2e_tests.rs  fixtures.rs  helpers.rs  lib.rs  mock_providers.rs  provider_tests.rs  rate_limit_tests.rs  routing_tests.rs
tests/load/: README.md  baseline-test.js  k6-config.js  smoke-test.js  soak-test.js  streaming-test.js  stress-test.js
(+7 files in other folders)
