[package]
name = "gateway-agents"
description = "Intelligent routing agents for the LLM Inference Gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
# Internal crates
gateway-core = { workspace = true }
gateway-routing = { workspace = true }
gateway-telemetry = { workspace = true }
gateway-integrations = { workspace = true }
agentics-contracts = { path = "../agentics-contracts" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP server (for handler)
axum = { workspace = true }

# HTTP client (for Ruvector health checks)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tower = { workspace = true }

[lints]
workspace = true
