[package]
name = "gateway-benchmarks"
version = "0.1.0"
edition = "2021"
description = "Canonical benchmark infrastructure for the LLM Inference Gateway"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/llm-inference-gateway"
keywords = ["llm", "gateway", "benchmark", "performance"]
categories = ["development-tools::profiling"]

[dependencies]
# Gateway crates
gateway-core = { path = "../gateway-core" }
gateway-config = { path = "../gateway-config" }
gateway-routing = { path = "../gateway-routing" }
gateway-resilience = { path = "../gateway-resilience" }
gateway-telemetry = { path = "../gateway-telemetry" }
gateway-server = { path = "../gateway-server" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
