[package]
name = "gateway-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the LLM Inference Gateway"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/llm-inference-gateway"
keywords = ["llm", "gateway", "cli", "ai", "inference"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "llm-gateway"
path = "src/main.rs"

[dependencies]
# Gateway crates
gateway-core = { path = "../gateway-core" }
gateway-config = { path = "../gateway-config" }
gateway-server = { path = "../gateway-server" }
gateway-sdk = { path = "../gateway-sdk" }
gateway-migrations = { path = "../gateway-migrations" }

# CLI framework
clap = { version = "4.4", features = ["derive", "env", "cargo"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client for health checks
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Output formatting
tabled = "0.15"
colored = "2.1"
indicatif = "0.17"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
directories = "5.0"
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
humantime = "2.1"
bytesize = "1.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"
