[package]
name = "gateway-migrations"
version = "0.1.0"
edition = "2021"
description = "Database migrations for the LLM Inference Gateway"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/llm-inference-gateway"
keywords = ["llm", "gateway", "migrations", "database"]
categories = ["database"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "sqlite",
    "any",
    "migrate",
    "chrono",
    "uuid",
    "json"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime-serde = "1.1"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Crypto for checksums
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
