[package]
name = "gateway-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the LLM Inference Gateway"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/llm-inference-gateway"
keywords = ["llm", "gateway", "sdk", "ai", "inference"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
blocking = ["tokio/rt"]

[dependencies]
# Gateway core types
gateway-core = { path = "../gateway-core" }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }

# Async runtime
tokio = { version = "1.35", features = ["sync", "time"] }
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
secrecy = { version = "0.8", features = ["serde"] }
bytes = "1.5"
pin-project-lite = "0.2"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
wiremock = "0.6"
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
