[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "Integration tests for the LLM Inference Gateway"

[dependencies]
# Gateway crates
gateway-core = { path = "../../crates/gateway-core" }
gateway-config = { path = "../../crates/gateway-config" }
gateway-providers = { path = "../../crates/gateway-providers" }
gateway-routing = { path = "../../crates/gateway-routing" }
gateway-telemetry = { path = "../../crates/gateway-telemetry" }
gateway-resilience = { path = "../../crates/gateway-resilience" }
gateway-server = { path = "../../crates/gateway-server" }

# Async runtime
tokio = { version = "1.35", features = ["full", "test-util"] }

# HTTP client for testing
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Web framework for test server
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing utilities
wiremock = "0.6"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Tracing for test debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Redis for cache tests
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
pretty_assertions = "1.4"
